--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "jfr2024"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+description = "JFR 2024 for everyone"
+authors = ["Force Fidele KIEN <forcefidele@gmail.com>"]
+license = "MIT"
+repository = "https://fidele007.github.io/jfr2024/"
 edition = "2021"
 rust-version = "1.77.2"
 
@@ -21,5 +21,7 @@ tauri-build = { version = "2.0.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.0.6", features = [] }
+tauri = { version = "2.0.6", features = ["protocol-asset"] }
 tauri-plugin-log = "2.0.0-rc"
+tauri-plugin-shell = "2"
+tauri-plugin-fs = "2"
