--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"svelte-check": "^4.0.4",
 		"tslib": "^2.7.0",
 		"typescript": "^5.6.2",
-		"vite": "^5.4.8"
+		"vite": "^5.4.8",
+		"vite-plugin-devtools-json": "^0.4.1"
 	},
 	"type": "module"
 }
