--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"vite": "^5.4.8",
 		"vite-plugin-devtools-json": "^0.4.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^12.1.0"
+	}
 }
